# Learn-LLVM-17

./: .clang-format  .gitignore
Chapter02/calc/: CMakeLists.txt
Chapter02/calc/src/: AST.h  CMakeLists.txt  Calc.cpp  CodeGen.cpp
Chapter03/tinylang/: CMakeLists.txt  compile_commands.json
Chapter03/tinylang/.cache/clangd/index/: AST.h.030C30F07BCBF9E6.idx  Diagnostic.cpp.CD2516E7EC195D42.idx  Diagnostic.def.C50A5A966F2D6930.idx  Diagnostic.h.6B56FC5E996088AB.idx  Driver.cpp.AAEEB85B302B4886.idx  LLVM.h.2FECFA1EA17D7BEC.idx  Lexer.cpp.C3788BAFE8010E92.idx  Lexer.h.7FAFC9E2293D07AE.idx  Parser.cpp.100802D95768F23D.idx  Parser.h.D9F17B00E46515C5.idx  Scope.cpp.9621F1D69D85719D.idx  Scope.h.4D26B65E5B07AB19.idx  Sema.cpp.E0B428592E47C850.idx  Sema.h.B6C8CFDF18AD3B4C.idx  Token.h.82C5EDE48A00FB12.idx  TokenKinds.cpp.087F7616DA40555A.idx  TokenKinds.def.D97DA43244BD2A68.idx  TokenKinds.h.2D374F66C5BE06D4.idx  Version.cpp.24843060B7CE8E23.idx  Version.h.C7792BA0212BDD2F.idx
Chapter03/tinylang/include/tinylang/AST/: AST.h
Chapter03/tinylang/include/tinylang/Basic/: Diagnostic.h  TokenKinds.def  TokenKinds.h
Chapter03/tinylang/include/tinylang/Lexer/: Lexer.h  Token.h
Chapter03/tinylang/lib/Basic/: Diagnostic.cpp  TokenKinds.cpp
Chapter03/tinylang/lib/Lexer/: Lexer.cpp
Chapter03/tinylang/lib/Parser/: Parser.cpp
Chapter03/tinylang/lib/Sema/: Sema.cpp
Chapter04/tinylang/: CMakeLists.txt
Chapter04/tinylang/lib/CodeGen/: CGProcedure.cpp
Chapter04/tinylang/tools/driver/: CMakeLists.txt  Driver.cpp
Chapter05/tinylang/: CMakeLists.txt
(+2 files in other folders)
